--- a/testgen/pom.xml
+++ b/testgen/pom.xml
@@ -29,6 +29,12 @@
 			<version>${junitVersion}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <version>1.0.4</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
