--- a/testgen/src/main/resources/logging.properties
+++ b/testgen/src/main/resources/logging.properties
@@ -1,4 +1,5 @@
-handlers=java.util.logging.ConsoleHandler
+#handlers=java.util.logging.ConsoleHandler
+handlers=com.github.sdarioo.testgen.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.level=INFO
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
