--- a/testgen/pom.xml
+++ b/testgen/pom.xml
@@ -41,6 +41,12 @@
             <version>1.0.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
