Working on spring-jpa project.

--- a/spring/spring-jpa/src/main/resources/data-access.properties
+++ b/spring/spring-jpa/src/main/resources/data-access.properties
@@ -4,21 +4,28 @@
 data.source.proxy=true
 
 #-------------------------------------------------------------------------------
-# HSQL Settings (used in test profile)
+# HSQL Settings (used in 'test' profile)
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 test.database=HSQL
+
+# Properties that control the population of schema and data for a new data source
+test.initDB=db/hsql/initDB.sql
 
 test.driverClassName=org.hsqldb.jdbcDriver
 test.url=jdbc:hsqldb:mem:demodb
 test.username=sa
 test.password=
 
+
 #-------------------------------------------------------------------------------
-# PgSQL Settings (used in dev profile)
+# PgSQL Settings (used in 'dev' profile)
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 dev.database=POSTGRESQL
+
+# Properties that control the population of schema and data for a new data source
+dev.initDB=db/postgres/initDB.sql
 
 dev.driverClassName=org.postgresql.Driver
 dev.url=jdbc\:postgresql\:demodb
