--- a/spring/spring-jpa/pom.xml
+++ b/spring/spring-jpa/pom.xml
@@ -18,6 +18,8 @@
 		<logback.version>1.1.3</logback.version>
 		<jcl.slf4j.version>1.7.12</jcl.slf4j.version>
 		<java.version>1.8</java.version>
+		<junit.version>4.12</junit.version>
+		<assertj.version>3.5.1</assertj.version>
 	</properties>
 
 	<dependencyManagement>
@@ -110,13 +112,24 @@
 		    <version>2.3.3</version>
 		</dependency>
 
+		<!-- Test dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 
