--- a/spring/spring-jpa/src/main/resources/hibernate.properties
+++ b/spring/spring-jpa/src/main/resources/hibernate.properties
@@ -1,3 +1,4 @@
 hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=none
 hibernate.generate_statistics=true
+hibernate.jdbc.fetch_size=100
