Testing postgres sequences.

--- a/spring/spring-jpa/src/main/resources/data-access.properties
+++ b/spring/spring-jpa/src/main/resources/data-access.properties
@@ -1,7 +1,7 @@
 
 # Properties file with JDBC and JPA settings.
 
-data.source.proxy=true
+data.source.proxy=false
 
 #-------------------------------------------------------------------------------
 # HSQL Settings (used in 'test' profile)
