--- a/spring/spring-jpa/src/main/resources/hibernate.properties
+++ b/spring/spring-jpa/src/main/resources/hibernate.properties
@@ -1,4 +1,5 @@
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=none
-hibernate.generate_statistics=true
-hibernate.jdbc.fetch_size=100
+hibernate.jdbc.batch_size=100
+
+hibernate.generate_statistics=false
