--- a/spring/spring-jpa/src/main/resources/data-access.properties
+++ b/spring/spring-jpa/src/main/resources/data-access.properties
@@ -1,33 +1,35 @@
 
 # Properties file with JDBC and JPA settings.
 
-data.source.proxy=false
+active.database=hsql
 
 #-------------------------------------------------------------------------------
-# HSQL Settings (used in 'test' profile)
+# HSQL settings
+#-------------------------------------------------------------------------------
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
-test.database=HSQL
+hsql.database=HSQL
 
 # Properties that control the population of schema and data for a new data source
-test.initDB=db/hsql/initDB.sql
+hsql.initDB=db/hsql/initDB.sql
 
-test.driverClassName=org.hsqldb.jdbcDriver
-test.url=jdbc:hsqldb:mem:demodb
-test.username=sa
-test.password=
+hsql.driverClassName=org.hsqldb.jdbcDriver
+hsql.url=jdbc:hsqldb:mem:demodb
+hsql.username=sa
+hsql.password=
 
 
 #-------------------------------------------------------------------------------
-# PgSQL Settings (used in 'dev' profile)
+# Postgres settings
+#-------------------------------------------------------------------------------
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
-dev.database=POSTGRESQL
+postgres.database=POSTGRESQL
 
 # Properties that control the population of schema and data for a new data source
-dev.initDB=db/postgres/initDB.sql
+postgres.initDB=db/postgres/initDB.sql
 
-dev.driverClassName=org.postgresql.Driver
-dev.url=jdbc\:postgresql\:demodb
-dev.username=postgres
-dev.password=pSql1234
+postgres.driverClassName=org.postgresql.Driver
+postgres.url=jdbc\:postgresql\:demodb
+postgres.username=postgres
+postgres.password=pSql1234
