--- a/spring/spring-jpa/pom.xml
+++ b/spring/spring-jpa/pom.xml
@@ -20,6 +20,7 @@
 		<java.version>1.8</java.version>
 		<junit.version>4.12</junit.version>
 		<assertj.version>3.5.1</assertj.version>
+		<validation.api.version>1.0.0.GA</validation.api.version>
 	</properties>
 
 	<dependencyManagement>
@@ -35,7 +36,14 @@
 	</dependencyManagement>
 
 	<dependencies>
-	    <!--  Spring dependencies -->
+		<!-- Bean Validation API -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${validation.api.version}</version>
+		</dependency>
+
+		<!-- Spring dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -56,7 +64,7 @@
 			<version>${spring.data.version}</version>
 		</dependency>
 
-		
+
 
 		<!-- Hibernate dependencies -->
 		<dependency>
@@ -84,32 +92,32 @@
 
 		<!-- For BasicDataSource from Database Connection Pool -->
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-dbcp2</artifactId>
-		    <version>2.1.1</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1.1</version>
 		</dependency>
 
-		<!--  DataSource Proxy -->
-		<!--  https://github.com/ttddyy/datasource-proxy/ -->
+		<!-- DataSource Proxy -->
+		<!-- https://github.com/ttddyy/datasource-proxy/ -->
 		<dependency>
-		  <groupId>net.ttddyy</groupId>
-		  <artifactId>datasource-proxy</artifactId>
-		  <version>1.3.1</version>
+			<groupId>net.ttddyy</groupId>
+			<artifactId>datasource-proxy</artifactId>
+			<version>1.3.1</version>
 		</dependency>
 
-		<!--  PostgreSQL jdbc driver -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4.1208</version>
-            <scope>runtime</scope>
-        </dependency>
-        
-        <!-- HSQL jdbc driver -->
-        <dependency>
-		    <groupId>org.hsqldb</groupId>
-		    <artifactId>hsqldb</artifactId>
-		    <version>2.3.3</version>
+		<!-- PostgreSQL jdbc driver -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1208</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- HSQL jdbc driver -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.3</version>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -125,11 +133,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
